// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`survey-detail-data-download renders correctly (modal not visible) 1`] = `
<div
  className="css-v3urfw-SurveyDetailDataDownload"
>
  <div
    className="css-1rabetu-SurveyDetailDataDownload"
  >
    <div
      className="css-4d08oz-Heading"
    >
      projects__survey_details_data
    </div>
  </div>
  <div
    className="css-lblbfe-Card"
  >
    <div
      className="card-content css-1gc675l-CardContent"
    >
      <div
        className="css-r9z753-SurveyDetailDataDownload"
      >
        <div
          className="css-1ds7t6g-SurveyDetailDataDownload"
        >
          projects__survey_details_survey_data
          <div
            className="css-0"
            id="tooltip_42"
          >
            <div
              className="css-qnyrc1-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
          <div
            className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
            role="tooltip"
            style={
              {
                "backgroundColor": "#2e3032",
                "zIndex": 1,
              }
            }
          >
            <div
              className="css-12xum2z-Tooltip"
            >
              <div
                className="css-1kjzr28-Tooltip"
              >
                <div
                  className="css-jb7kz7-Heading"
                >
                  projects__survey_details_survey_data
                </div>
                <div
                  className="css-8tih5m-Text"
                >
                  projects__survey_details_survey_data_tooltip
                </div>
              </div>
            </div>
            <div
              className="react-tooltip-arrow styles-module_arrow__K0L3T"
              style={{}}
            />
          </div>
        </div>
        <a
          className="css-dc975c-SurveyDetailDataDownload"
          href="/backend/binary/survey/18de306c-a8f8-4311-9a2f-ca5418a245ac"
        >
          <button
            className="css-1cywa3f-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-mj8vo1-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
            </div>
          </button>
        </a>
      </div>
      <div
        className="css-r9z753-SurveyDetailDataDownload"
      >
        <div
          className="css-1ds7t6g-SurveyDetailDataDownload"
        >
          projects__survey_details_media
          <div
            className="css-0"
            id="tooltip_42"
          >
            <div
              className="css-qnyrc1-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
          <div
            className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
            role="tooltip"
            style={
              {
                "backgroundColor": "#2e3032",
                "zIndex": 1,
              }
            }
          >
            <div
              className="css-12xum2z-Tooltip"
            >
              <div
                className="css-1kjzr28-Tooltip"
              >
                <div
                  className="css-jb7kz7-Heading"
                >
                  projects__survey_details_media
                </div>
                <div
                  className="css-8tih5m-Text"
                >
                  projects__survey_details_media_tooltip
                </div>
              </div>
            </div>
            <div
              className="react-tooltip-arrow styles-module_arrow__K0L3T"
              style={{}}
            />
          </div>
        </div>
        <a
          className="css-dc975c-SurveyDetailDataDownload"
          href="/backend/binary/survey/18de306c-a8f8-4311-9a2f-ca5418a245ac/binaries"
        >
          <button
            className="css-1cywa3f-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-mj8vo1-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
            </div>
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`survey-detail-data-download renders correctly (modal visible) 1`] = `
[
  <div
    className="css-v3urfw-SurveyDetailDataDownload"
  >
    <div
      className="css-aqykfi-SurveyDetailDataDownload"
    >
      <div
        className="css-9jmul5-Heading"
      >
        projects__survey_details_data
      </div>
      <div
        className="css-0"
        id="tooltip_42"
      >
        <div
          className="css-12zx7x-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
      </div>
      <div
        className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
        role="tooltip"
        style={
          {
            "backgroundColor": "#2e3032",
            "zIndex": 1,
          }
        }
      >
        <div
          className="css-1tdk34p-Tooltip"
        >
          <div
            className="css-1kjzr28-Tooltip"
          >
            <div
              className="css-jb7kz7-Heading"
            >
              projects__survey_details_data_tooltip_title
            </div>
            <div
              className="css-8tih5m-Text"
            >
              projects__survey_details_data_tooltip_text
            </div>
          </div>
          <div
            className="css-1fvvs0r-Tooltip"
          >
            <div
              className="css-nlq2eo-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
        </div>
        <div
          className="react-tooltip-arrow styles-module_arrow__K0L3T"
          style={{}}
        />
      </div>
    </div>
    <div
      className="css-lblbfe-Card"
    >
      <div
        className="card-content css-1gc675l-CardContent"
      >
        <div
          className="css-r9z753-SurveyDetailDataDownload"
        >
          <div
            className="css-1ds7t6g-SurveyDetailDataDownload"
          >
            projects__survey_details_survey_data
            <div
              className="css-0"
              id="tooltip_42"
            >
              <div
                className="css-qnyrc1-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
            </div>
            <div
              className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
              role="tooltip"
              style={
                {
                  "backgroundColor": "#2e3032",
                  "zIndex": 1,
                }
              }
            >
              <div
                className="css-12xum2z-Tooltip"
              >
                <div
                  className="css-1kjzr28-Tooltip"
                >
                  <div
                    className="css-jb7kz7-Heading"
                  >
                    projects__survey_details_survey_data
                  </div>
                  <div
                    className="css-8tih5m-Text"
                  >
                    projects__survey_details_survey_data_tooltip
                  </div>
                </div>
              </div>
              <div
                className="react-tooltip-arrow styles-module_arrow__K0L3T"
                style={{}}
              />
            </div>
          </div>
          <button
            className="css-1cywa3f-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-mj8vo1-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          className="css-r9z753-SurveyDetailDataDownload"
        >
          <div
            className="css-1ds7t6g-SurveyDetailDataDownload"
          >
            projects__survey_details_media
            <div
              className="css-0"
              id="tooltip_42"
            >
              <div
                className="css-qnyrc1-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
            </div>
            <div
              className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
              role="tooltip"
              style={
                {
                  "backgroundColor": "#2e3032",
                  "zIndex": 1,
                }
              }
            >
              <div
                className="css-12xum2z-Tooltip"
              >
                <div
                  className="css-1kjzr28-Tooltip"
                >
                  <div
                    className="css-jb7kz7-Heading"
                  >
                    projects__survey_details_media
                  </div>
                  <div
                    className="css-8tih5m-Text"
                  >
                    projects__survey_details_media_tooltip
                  </div>
                </div>
              </div>
              <div
                className="react-tooltip-arrow styles-module_arrow__K0L3T"
                style={{}}
              />
            </div>
          </div>
          <button
            className="css-1cywa3f-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-mj8vo1-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div
      className="css-1iw6hgd-Overlay"
    >
      <div>
        <div
          className="css-1o0aduo-Modal"
        >
          <header
            className="css-14sl779-Modal"
          >
            <div
              className="css-1f6p2vj-Heading"
            >
              projects__survey_details_data_download_modal_title
            </div>
            <div
              className="css-12vbzj8-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
              onClick={[MockFunction]}
            />
          </header>
          <section
            className="css-1ffs34-Modal"
          >
            <div
              className="css-1lqosaz-Text"
            >
              projects__survey_details_data_tooltip_text
            </div>
            <a
              className="css-hl89jf-SurveyDetailDataDownload"
              href="/backend/binary/survey/18de306c-a8f8-4311-9a2f-ca5418a245ac"
            >
              <button
                className="css-hjkiyt-Button"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="css-95j2hm-Button"
                >
                  <div
                    className="css-kuxry5-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  projects__survey_details_data_download_modal_button
                </div>
              </button>
            </a>
          </section>
        </div>
      </div>
    </div>
  </div>,
]
`;
